fix: Remove animation occuring on hover as at end of animation cycle it jumps frames

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,7 @@ h1, h2, h3, h4, h5, h6 {
 .blue-background {
     background-color: #161827;
     width: 100%;
+    height: 90px;
     position: fixed;
     z-index:1;
 }
@@ -36,8 +37,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #logo:hover {
-    border: 10px solid #F0EFE6;
-    border-radius: 25px;
+    border-left:  1px solid #F0EFE6;
+    border-right: 1px solid #F0EFE6;
+    border-top: 5px solid #F0EFE6;
+    border-bottom: 5px solid #F0EFE6;
 }
 
 #nav-bar {
@@ -76,21 +79,20 @@ h1, h2, h3, h4, h5, h6 {
     height: 600px;
     overflow: hidden;
     margin-top:auto;
+    padding-top:90px;
 }
 
 #hero-image {
     width: 100%;
     height: 600px;
     background: url(../images/treadmill-runner-medium.jpg) no-repeat center center;
-
     z-index:2;
-}
 
-#hero-image:hover {
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
+
 
 /* Hero Image Animation */
 @keyframes hero-zoom {
